kubernetes/namespace.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: sorteio
  labels:
    istio-injection: enabled
