kubernetes/sorteio_client.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bicheiro
  namespace: sorteio
  labels:
    app: bicheiro
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      version: v1
      app: bicheiro
  template:
    metadata:
      labels:
        app: bicheiro
        version: v1
    spec:
      containers:
        - name: bicheiro
          image: mostela/sorteioclient
          imagePullPolicy: Always
          ports:
            - containerPort: 3333
              name: bicheiro-port
              protocol: TCP
          resources:
            requests:
              memory: "15Mi"
              cpu: "5m"
            limits:
              memory: "30Mi"
              cpu: "5m"
---
apiVersion: v1
kind: Service
metadata:
  name: bicheiro-svc
  namespace: sorteio
  labels:
    app: bicheiro
    version: v1
spec:
  type: LoadBalancer
  selector:
    app: bicheiro
    version: v1
  ports:
    - port: 80
      targetPort: bicheiro-port
