kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sorteio
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: sorteio
  name: sorteio-ingress
spec:
  rules:
    - host: mostela.com
    - http:
        paths:
          - backend:
              service:
                name: bicheiro-svc
                port:
                  number: 80
            path: /singup/*
            pathType: Prefix
          - backend:
              service:
                name: admindb-svc
                port:
                  name: admin-port
            path: /admin/*
            pathType: Prefix
          - backend:
              service:
                name: loteria-svc
                port:
                  number: 80
            path: /game/*
            pathType: Prefix
